--- a/pxxl.yaml
+++ b/pxxl.yaml
@@ -8,7 +8,7 @@ build:
     php artisan route:cache
     php artisan view:cache
     php artisan migrate --force
-
+    php artisan db:seed --force
 
 start:
   command: php artisan serve --host=0.0.0.0 --port=8080
@@ -17,3 +17,9 @@ env:
   APP_ENV: production
   APP_DEBUG: false
   APP_URL: https://deliciouseats-backend-laravel.pxxl.xyz
+  DB_CONNECTION: mysql
+  DB_HOST: db.pxxl.pro
+  DB_PORT: 3306
+  DB_DATABASE: deliciouseats
+  DB_USERNAME: pxxluser
+  DB_PASSWORD: 089643959
